--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "com.siccity.gltfutility": "0.7.2",
     "com.unity.collab-proxy": "2.0.1",
+    "com.unity.collections": "1.2.4",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
@@ -40,8 +42,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.siccity.gltfutility": "0.7.2"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
