SortCoordinatesJob added together with test
Former-commit-id: fe27a8945b56825d446eac2891250ab8a5cca840

--- a/Assets/Scripts/Tests/Tests.asmdef
+++ b/Assets/Scripts/Tests/Tests.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "GameAssembly",
-        "Unity.Collections"
+        "Unity.Collections",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
