--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -44,13 +44,15 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.domybest.mybox": "1.8.0"
   },
   "scopedRegistries": [
     {
       "name": "package.openupm.com",
       "url": "https://package.openupm.com",
       "scopes": [
+        "com.domybest.mybox",
         "com.openupm",
         "com.siccity.gltfutility"
       ]
