--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,20 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "1.1.5",
-    "com.unity.cinemachine": "2.9.7",
-    "com.unity.collab-proxy": "2.3.1",
-    "com.unity.collections": "1.2.4",
-    "com.unity.ide.rider": "3.0.28",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.ide.vscode": "1.2.5",
-    "com.unity.recorder": "4.0.2",
-    "com.unity.render-pipelines.universal": "14.0.10",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.2",
+    "com.domybest.mybox": "1.8.0",
+    "com.unity.ai.navigation": "2.0.8",
+    "com.unity.cinemachine": "2.10.4",
+    "com.unity.collab-proxy": "2.9.2",
+    "com.unity.collections": "2.5.1",
+    "com.unity.ide.rider": "3.0.36",
+    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.recorder": "5.1.2",
+    "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.test-framework": "1.5.1",
+    "com.unity.timeline": "1.8.9",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.9.7",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -44,8 +45,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.domybest.mybox": "1.8.0"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
